# steamstacks

./: .gitignore  Cargo.toml  LICENSE.txt
crates/bindings/: Cargo.toml  build.rs  smake.lua
crates/bindings/src/: macos_bindings.rs
crates/core/: Cargo.toml
crates/core/src/: apps.rs  friends.rs  lib.rs  steam_api.rs  user.rs  utils.rs
crates/core/src/utils/: callbacks.rs  error.rs  mod.rs  result.rs
crates/testing/: Cargo.toml
crates/testing/src/: main.rs
