[package]
name = "steamstacks-bindings"
version = "0.1.0"
description = "Raw rust bindings for steamworks"
license = "MIT"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
rebuild-bindings = ["bindgen"]

[build-dependencies]
bindgen = {version = "0.65.1", optional = true }
